--- a/index.html
+++ b/index.html
@@ -122,7 +122,12 @@
         </video>
       </div>
       <div class="video-box chop" onclick="togglePlay()" id="chop">
-        <img src="Anime Food/speaker (1).svg" width="20px" id="sound" />
+        <img
+          src="Anime Food/speaker (1).svg"
+          onclick="togglePlay()"
+          width="20px"
+          id="sound"
+        />
         <video id="chopsound" height="300" autoplay muted loop>
           <source
             class="loading"
